# line-detection

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  Makefile  README.md  coordinates.txt  main.py  pyproject.toml  requirements.txt  ruff.toml
config/: __init__.py  config.yaml  load_cfg.py
src/data/: .gitignore  data_loader.py  ds_wireframe.py  preparation_ds_wireframe.py  utils.py
src/data/data_cfg/: __init__.py  base.yaml
src/models/loss/: __init__.py  _func.py  mlsd_multi_loss.py
src/models/metric/: __init__.py
src/models/model_cfg/: base_mlsd.yaml  mobilev2_mlsd_tiny_512_base2_bsize24.yaml
src/models/networks/: hourglass_net.py  hourglass_stack_net.py  mobilev2_mlsd_net.py
src/models/networks/modules/: __init__.py  base.py  bottleneck1D_h.py  bottleneck1D_v.py  bottleneck2D.py  bottleneckline.py  heads.py  hourglass.py  layers.py
src/models/optim/: lr_scheduler.py
src/models/pipeline/mlsd/: inference.py  learner.py  train.py  training.py
src/utils/: comm.py  decode.py  placeholder.py  txt_logger.py
workflow/: camera_pipeline.py  data_pipeline.py  inference_pipeline.py  line_detection_dev.py  redis_database.py  training_pipeline.py
